# simple-calculator

./: .gitignore  README.md  simple-calculator.cabal
src/: Calc.hs  Main.hs
test/: Spec.hs
