name:                simple-calculator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dakotaclemenceplaza/simple-calculator#readme
license:             BSD3
license-file:        LICENSE
author:              A. D.
maintainer:          example@example.com
copyright:           2021 Author name here
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Calc
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  
executable simple-calculator
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , simple-calculator
  other-modules:       Calc
                     
test-suite calc-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
      base >= 4.7 && < 5
    , hspec
    , simple-calculator
  hs-source-dirs: test
